# ScoringHero

./: pyproject.toml  scoringhero.py
eeg/: eeg_import_window.py  load_tosoo.py  load_tosoo3.py  load_wrapper.py
scoring/: load_scoring.py  load_tosoo_scoring.py  scoring_export_window.py  scoring_import_window.py  write_scoring.py
ui/: setup_ui.py
