[project]
name = "scoringhero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "fonttools==4.55.3",
    "h5py==3.12.1",
    "idna==3.10",
    "jinja2==3.1.4",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "markupsafe==3.0.2",
    "matplotlib==3.9.3",
    "mne==1.8.0",
    "numpy==2.2.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pyarrow>=12.0.0",
    "pefile==2023.2.7",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "pyinstaller==6.11.1",
    "pyinstaller-hooks-contrib==2024.10",
    "pyparsing==3.2.0",
    "pyqtgraph==0.13.7",
    "pyside6==6.8.1",
    "pyside6-addons==6.8.1",
    "pyside6-essentials==6.8.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywavelets==1.8.0",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.3",
    "scipy==1.14.1",
    "setuptools==75.6.0",
    "shiboken6==6.8.1",
    "six==1.17.0",
    "tqdm==4.67.1",
    "tzdata==2024.2",
    "urllib3==2.2.3",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "uv run pytest"
test-tosoo3 = "uv run python test_tosoo3_loader.py"
check = "uv run ruff check **/*.py && uv run black --check **/*.py"
fix = "uv run ruff check --fix **/*.py"
format = "uv run black **/*.py"
